--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@medusajs/js-sdk": "^2.9.0",
     "@medusajs/types": "^2.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
