--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@medusajs/js-sdk": "^2.9.0",
     "@medusajs/types": "^2.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -30,7 +31,8 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
